<resources>
    <string name="app_name">Simple Weather</string>
    <string name="app_icon">&#xf002;</string>
    <string name="change_city">Change City</string>
    <string name="enter_zip_code">You can change the city by entering City name or the ZIP Code</string>
    <string name="could_not_find">Hey there, could not find the city you wanted. Please enter a new one :</string>
    <string name="about_page">About</string>
    <string name="location">Location</string>
    <string name="toggle_values">Toggle Values</string>
    <string name="search">Search</string>
    <string name="first_go_text">GO</string>
    <string name="uh_oh">Uh oh. Seems like the city you entered does not exist on the Database. Please Try Again</string>
    <string name="pick_city">Hey there, let\'s start by picking a city for you</string>
    <string name="hey_there_condition">Hey there, %shere right now!</string>
    <string name="credits"><u>CREDITS</u></string>
    <string name="refresh">Refresh</string>
    <string name="speed">Speed : %.2f</string>
    <string name="mps">m/s</string>
    <string name="mph">mil/h</string>
    <string name="hPa">hPa</string>
    <string name="mm">mm</string>
    <string name="rain_">Rain : %.2f mm</string>
    <string name="snow_">Snow : %.2f mm</string>
    <string name="humidity">Humidity : %d %%</string>
    <string name="pressure">Pressure : %.2f hPa</string>
    <string name="temperature">Temperature : %1$.2f %2$s</string>
    <string name="city">City : %s</string>
    <string name="wind" formatted="false">%1$.2f %2$s</string>
    <string name="wind_speed">Wind Speed : %1$.2f %2$s</string>
    <string name="wind_">Wind : %1$.2f %2$s</string>
    <string name="humidity_">%d %%</string>
    <string name="sunrise">Sunrise at : %s</string>
    <string name="sunset">Sunset at : %s</string>
    <string name="notif_temp" formatted="false">Temperature : %1$d %2$s</string>
    <string name="notif_city">City : %s</string>
    <string name="north">Wind blowing towards North</string>
    <string name="north_east">Wind blowing in the North-East direction</string>
    <string name="north_west">Wind blowing in the North-West direction</string>
    <string name="south">Wind blowing towards South</string>
    <string name="south_east">Wind blowing in the South-East direction</string>
    <string name="south_west">Wind blowing in the South-West direction</string>
    <string name="east">Wind blowing towards East</string>
    <string name="west">Wind blowing towards West</string>
    <string name="paytm_err_0">"Saved to : %s "/Pictures/Donate to Simple Weather Developer.png"</string>
    <string name="paytm_err_1">Could Not Save the QR Code to gallery, please check the relevant permissions on your phone and try again later</string>
    <string name="paytm_err_min_1">Please Try Again Later</string>
    <string name="humidity_icon">&#xf07a;</string>
    <string name="pressure_icon">&#xf079;</string>
    <string name="speed_icon">&#xf050;</string>
    <string name="day_icon">&#xf00d;</string>
    <string name="night_icon">&#xf0ae;</string>
    <string name="sunrise_icon">&#xf051;</string>
    <string name="sunset_icon">&#xf052;</string>
    <string name="top_right">&#xf057;</string>
    <string name="right">&#xf04d;</string>
    <string name="bottom_right">&#xf088;</string>
    <string name="down">&#xf044;</string>
    <string name="bottom_left">&#xf043;</string>
    <string name="left">&#xf048;</string>
    <string name="top_left">&#xf087;</string>
    <string name="top">&#xf058;</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_sunny_cloudy">&#xf002;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="thunderstorm_with_light_rain">&#xf01d;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_heavy_drizzle">&#xf015;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01a;</string>
    <string name="weather_rain_wind">&#xf018;</string>
    <string name="weather_rain_drizzle">&#xf017;</string>
    <string name="weather_heavy_snow">&#xf076;</string>
    <string name="weather_shower_rain">&#xf01a;</string>
    <string name="weather_sleet">&#xf0b5;</string>
    <string name="weather_smoke">&#xf062;</string>
    <string name="weather_dust">&#xf063;</string>
    <string name="weather_storm">&#xf0ce;</string>
    <string name="weather_hurricane">&#xf0cf;</string>
    <string name="weather_volcano">&#xf0c8;</string>
    <string name="weather_tornado">&#xf056;</string>
    <string name="thunderstorm">&#xf01e;</string>
    <string name="lightning">&#xf016;</string>
    <string name="sprinkle">&#xf01c;</string>
    <string name="rain">&#xf019;</string>
    <string name="rain_wind">&#xf018;</string>
    <string name="rain_mix">&#xf017;</string>
    <string name="showers">&#xf01a;</string>
    <string name="storm_showers">&#xf01d;</string>
    <string name="snow">&#xf01b;</string>
    <string name="sleet">&#xf0b5;</string>
    <string name="smoke">&#xf062;</string>
    <string name="haze">&#xf0b6;</string>
    <string name="dust">&#xf063;</string>
    <string name="volcano">&#xf0c8;</string>
    <string name="fog">&#xf014;</string>
    <string name="cloudy_gusts">&#xf011;</string>
    <string name="tornado">&#xf056;</string>
    <string name="cloudy">&#xf013;</string>
    <string name="hurricane">&#xf073;</string>
    <string name="snowflake_cold">&#xf076;</string>
    <string name="hot">&#xf072;</string>
    <string name="windy">&#xf021;</string>
    <string name="hail">&#xf015;</string>
    <string name="strong_wind">&#xf050;</string>
    <string name="day_clear">&#xf00d;</string>
    <string name="day_cloudy">&#xf002;</string>
    <string name="day_rainy">&#xf008;</string>
    <string name="day_heavy_drizzle">&#xf004;</string>
    <string name="day_snowy">&#xf00a;</string>
    <string name="day_thunder">&#xf01e;</string>
    <string name="day_drizzle">&#xf009;</string>
    <string name="day_rain_wind">&#xf007;</string>
    <string name="day_rain_drizzle">&#xf006;</string>
    <string name="night_clear">&#xf02e;</string>
    <string name="night_cloudy">&#xf086;</string>
    <string name="night_rainy">&#xf028;</string>
    <string name="night_heavy_drizzle">&#xf024;</string>
    <string name="night_snowy">&#xf02a;</string>
    <string name="night_thunder">&#xf02d;</string>
    <string name="night_drizzle">&#xf029;</string>
    <string name="night_rain_wind">&#xf027;</string>
    <string name="night_rain_drizzle">&#xf026;</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="change_owm_key_header">Change OWM API Key</string>
    <string name="change_owm_key_content">You can enter your own custom OpenWeatherMap API key, and help reduce the load from my API Key.
        \n\nBEWARE: Entering a wrong API Key may result in the app going haywire. Do this at your own risk</string>
    <string name="go">GO</string>
    <string name="reset">RESET</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="enter_city_first">Enter a City Name First</string>
    <string name="check_internet">Please check your Internet connection</string>
    <string name="enable_location">Please Enable Location Permission to Perform this action.</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading</string>
    <string name="c">°C</string>
    <string name="f">°F</string>
    <string name="daily">DAILY</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_first_launch">Enter City</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_graph">Weather Graphs</string>
    <string name="drawer_item_map">Weather Map</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_custom_key">Custom OpenWeatherMap Key</string>
    <string name="drawer_item_notifications">Show Hourly Notifications</string>
    <string name="drawer_item_fahrenheit">Use Fahrenheit</string>
    <string name="drawer_item_paytm">Donate via PayTm</string>
    <string name="drawer_version_header">Version</string>
    <string name="weather_notification_title">Weather</string>
    <string name="weather_notification_description">Enable Hourly Weather Notifications</string>
    <string name="morning">Morning</string>
    <string name="night">Night</string>
    <string name="day">Day</string>
    <string name="Evening">Evening</string>
    <string name="paytm_donate">Your donation could help me develop and support more apps. If you wish to donate, click on the QR Code and save it to your gallery, and open this QR Code in your PayTm app </string>
    <string name="target_search_title">Search for a city</string>
    <string name="target_search_content">Search for weather data from over 200,000 cities and towns</string>
    <string name="target_location_title">Search data of your location</string>
    <string name="target_location_content">Tap to check the weather of the location you are at right now. Swipe from the left edge of the screen to the right to see more options</string>
    <string name="target_refresh_title">Refresh</string>
    <string name="target_refresh_content">Swipe from the top to refresh</string>
    <string name="no_internet_title">No Internet</string>
    <string name="no_internet_content">Internet Access Needs To Be Enabled To Display Weather Data</string>
    <string name="no_internet_mobile_data">Mobile Data</string>
    <string name="no_internet_wifi">Wi-Fi</string>
    <string name="update_period_15min">15 minutes</string>
    <string name="update_period_30min">30 minutes</string>
    <string name="update_period_1hour">1 hour</string>
    <string name="update_period_3hours">3 hours</string>
    <string name="update_period_6hours">6 hours</string>
    <string name="update_period_12hours">12 hours</string>
    <string name="pref_temp_header">Temperature</string>
    <string name="pref_notification_header">Notifications</string>
    <string name="bottom_rain">Rain</string>
    <string name="bottom_wind">Wind</string>
    <string name="bottom_temperature">Temperature</string>
    <string name="other_apps">OTHER APPS</string>
    <string name="author_header">AUTHOR</string>
    <string name="libraries_header">OPEN SOURCE LICENSES</string>
    <string name="dev_1_title">Aaditya Menon</string>
    <string name="dev_1_name">\@Sparker0i</string>
    <string name="lib_1">Weather Icons</string>
    <string name="lib_1_author">Erik Flowers</string>
    <string name="lib_2">Material Drawer</string>
    <string name="lib_2_author">Mike Penz</string>
    <string name="lib_3">Card Library</string>
    <string name="lib_3_author">Gabriele Mariotti</string>
    <string name="lib_4">Android Iconics</string>
    <string name="lib_4_author">Mike Penz</string>
    <string name="lib_5">MPAndroidChart</string>
    <string name="lib_5_author">Philipp Jahoda</string>
    <string name="lib_6">Material Dialogs</string>
    <string name="lib_6_author">Aidan Follestad</string>
    <string name="lib_7">Material Bottom Navigation</string>
    <string name="lib_7_author">Alessandro Crugnola</string>
    <string name="lib_8">Material Tap Target Prompt</string>
    <string name="lib_8_author">Samuel Wall</string>
    <string name="lib_9">Material Icons</string>
    <string name="lib_9_author">Google</string>
    <string name="lib_10">Gson</string>
    <string name="lib_10_author">Google</string>
    <string name="lib_11">Butterknife</string>
    <string name="lib_11_author">Jake Wharton</string>
    <string name="enter_city_hint">Enter city name</string>
</resources>