<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/libraries_header"
        android:textColor="@color/accent"
        android:textSize="@dimen/font_normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_1"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_1_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_2"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_2_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_3"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_3_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_4"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_4_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_5"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_5_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_6"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_6_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_7"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_7_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_8"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_8_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_9"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_9_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_10"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_10_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/lib_11">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_11"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_11_author"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

</LinearLayout>