<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.a5corp.weather.WeatherActivity" >

    <item
        android:id="@+id/location"
        android:icon="@drawable/ic_gps_fixed_white_24dp"
        android:title="@string/location"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/change_city"
        android:orderInCategory="4"
        android:title="@string/change_city"
        app:showAsAction="never"/>
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about_page"
        android:orderInCategory="5"
        android:title="@string/about_page"
        app:showAsAction="never"/>
    <item
        android:id="@+id/activity_new"
        android:orderInCategory="5"
        android:title="New Activity"
        app:showAsAction="never" />

</menu>