<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text="@string/author_header"
        android:textColor="@color/accent"
        android:textSize="@dimen/font_normal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:id="@+id/name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_1_title"
                android:textColor="@color/card_text_primary"
                android:textSize="@dimen/font_normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_1_name"
                android:textSize="@dimen/font_normal"/>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/other_apps"
            android:textSize="@dimen/font_normal"
            android:textStyle="normal"
            android:textColor="@color/accent"
            android:id="@+id/more_apps"/>


    </RelativeLayout>

</LinearLayout>