<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_first_launch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.a5corp.weather.fragment.FirstLaunchFragment"
    tools:showIn="@layout/activity_first_launch">

    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:layout_alignBaseline="@+id/city_input"
        android:layout_below="@+id/intro_text"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_city"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/city_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_toStartOf="@id/go_button"
        android:hint="@string/enter_city_hint"
        android:layout_marginTop="17dp"
        android:inputType="textCapWords"
        tools:ignore="LabelFor"
        android:layout_below="@+id/intro_text"
        android:layout_alignParentStart="true"/>

</RelativeLayout>